[package]
name = "aiffer"
version = "0.2.0"
authors = ["Julien Tregoat <jules@jules.nyc>"]
description = "AIFF codec"
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/kjmz14/aiffer"
repository = "https://github.com/kjmz14/aiffer"
keywords = ["aiff", "pcm", "audio", "codec", "decoder"]

[dependencies]
id3 = "0.5.1"
bytes = "0.5.4"
seek_bufread = "1.2.2"
log = "0.4.8"
# dynstack = "0.4.0" # interesting option for maintaining chunks

[dev-dependencies]
cpal = "0.12.1"

# used with cargo-run-script
[package.metadata.scripts]
test = "cargo test -- --nocapture"
fmt = "cargo +nightly fmt"