[package]
name = "aiffer"
version = "0.2.0"
authors = ["Julien Tregoat <jules@jules.nyc>"]
description = "AIFF codec"
edition = "2018"
license = "MIT"
homepage = "https://github.com/kjmz14/aiffer"
repository = "https://github.com/kjmz14/aiffer"
keywords = ["aiff", "pcm", "audio", "codec", "decoder"]

[dependencies]
id3 = "1.14.0"
bytes = "1.6.0"
seek_bufread = "1.2.2"
log = "0.4.8"
# dynstack = "0.4.0" # interesting option for maintaining chunks

[dev-dependencies]
cpal = "0.12.1"

# used with cargo-run-script
[package.metadata.scripts]
test = "cargo test -- --nocapture"
fmt = "cargo +nightly fmt"